--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -17,6 +17,9 @@
                 {% endif %}
             </div>
             <div class="post-footer">
+                <a href="{{ url_for('.like', id=post.id) }}">
+                    <span class="label label-primary">Like: {{ post.like_count }}</span>
+                </a>
                 {% if current_user == post.author %}
                 <a href="{{ url_for('.edit', id=post.id) }}">
                     <span class="label label-primary">Edit</span>
