--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,18 @@
                 {% if current_user.is_authenticated() %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <!--todo: por algum ícone aqui! <img src="{{ current_user.gravatar(size=18) }}"> -->
+                        Group <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <!-- todo: <li>My groups</li> -->
+                        <li><a href="{{ url_for('.creategroup') }}">Create your group</a></li>
+                        <!-- todo: <li>Search group</li> -->
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="{{ current_user.gravatar(size=18) }}">
                         Account <b class="caret"></b>
                     </a>
