--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -8,7 +8,12 @@
         </div>
         <div class="post-content">
             <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
-            <div class="post-author"><a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a></div>
+            <div class="post-author">
+                <a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
+                {% if post.group_id %}
+                    <a href="{{ url_for('.group', id=post.group_id) }}">@{{ post.group.name }}</a>
+                {% endif %}
+            </div>
             <div class="post-body">
                 {% if post.body_html %}
                     {{ post.body_html | safe }}
