--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -46,6 +46,11 @@
                 <a href="{{ url_for('.post', id=post.id) }}#comments">
                     <span class="label label-primary">{{ post.comments.count() }} Comments</span>
                 </a>
+                {% if current_user == post.group.admin or current_user == post.author %}
+                <a href="{{ url_for('.postdelete', id=post.id) }}">
+                    <span class="label label-danger">Delete</span>
+                </a>
+                {% endif %}
             </div>
         </div>
     </li>
