--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -24,11 +24,11 @@
             <div class="post-footer">
                 {% if not post.has_already_like(current_user) %}
                 <a href="{{ url_for('.like', id=post.id) }}">
-                    <span class="label label-primary">Like: {{ post.like_count }}</span>
+                    <span class="label label-primary">Likes: {{ post.like_count }}</span>
                 </a>
                 {% else %}
                 <a href="{{ url_for('.dislike', id=post.id) }}">
-                    <span class="label label-primary">Like: {{ post.like_count }} (dislike)</span>
+                    <span class="label label-primary">Likes: {{ post.like_count }} (dislike)</span>
                 </a>
                 {% endif %}
                 {% if current_user == post.author %}
