--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,15 +2,15 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}The Anti-Social Network{% endblock %}
+{% block title %}treeGroups{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
 	{% if current_user.is_authenticated() %}
     	<h1>Hello, {{ current_user.username }}</h1>
 	    {{ wtf.quick_form(form) }}
-	{% else %}<h1> Welcome to the Anti-Social Network! </h1>
-    <h3>This is the place where you can write whatever you want because nobody really cares! Create new imaginary friends! Let them like your posts! Enjoy having no real friends!</h3>
+	{% else %}<h1> Welcome to treeGroups! </h1>
+    <h3>This is the place where you can meet people who are interested in the same things that you do!</h3>
 	{% endif %}
 </div>
 
@@ -36,7 +36,6 @@
 {{ super() }}
 {{ pagedown.include_pagedown() }}
 
- <h5>Made with Love at <a href="https://www.hackerschool.com/">Hacker School</a> - Marina Wahl - 2014
 
 {% endblock %}
 
