--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -22,6 +22,10 @@
                 {% endif %}
             </div>
             <div class="post-footer">
+                <a href="{{ url_for('.post', id=post.id) }}">
+                    <span class="label label-default">See</span>
+                </a>
+
                 {% if not post.has_already_like(current_user) %}
                 <a href="{{ url_for('.like', id=post.id) }}">
                     <span class="label label-primary">Likes: {{ post.like_count }}</span>
@@ -40,9 +44,7 @@
                     <span class="label label-danger">Edit [Admin]</span>
                 </a>
                 {% endif %}
-                <a href="{{ url_for('.post', id=post.id) }}">
-                    <span class="label label-default">Permalink</span>
-                </a>
+
                 <a href="{{ url_for('.post', id=post.id) }}#comments">
                     <span class="label label-primary">{{ post.comments.count() }} Comments</span>
                 </a>
