--- a/app/templates/group.html
+++ b/app/templates/group.html
@@ -10,12 +10,11 @@
         <h1>{{ group.name }}</h1>
         <p>{{ group.description }}</p>
         <p><strong>Group admin</strong></p>
-        <p>
-            <p>
-            <a href="{{ url_for('.user', username=group.admin.username) }}"> <img class="img-rounded profile-thumbnail" src="{{ group.admin.gravatar(size=40) }}">
-            </a> {{ group.admin.name }}
-            </p>
-        </p>
+        <p><a href="{{ url_for('.user', username=group.admin.username) }}"> </a> {{ group.admin.username }} </p>
+
+        <p><img class="img-rounded profile-thumbnail" src="{{ group.admin.gravatar(size=50) }}"></p>
+
+
     </div>
 </div>
 
