--- a/app/templates/create_group.html
+++ b/app/templates/create_group.html
@@ -8,6 +8,6 @@
     <h1>Create your group</h1>
 </div>
 <div class="col-md-4">
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(form, enctype='multipart/form-data') }}
 </div>
 {% endblock %}
